tests/parser/bug_78/invalid_6.m.out
In invalid_6.m, line 4
| disp foo'bar
|         ^ lex error: this command form string is not terminated properly
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
